<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header-->
    <View
        android:id="@+id/header_container"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_red_light"
        android:fontFamily="@font/nexabold"
        android:text="@string/resume_header_title"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nexalight"
        android:text="@string/resume_header_subtitle"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/header_title"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <com.foyer.hbc.presentation.resume.CheckoutComponent
        android:id="@+id/checkout_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container" />

    <TextView
        android:id="@+id/bills_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_checkout_bills_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkout_component"
        app:layout_constraintTop_toTopOf="@id/checkout_component" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checkout_bills_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_dashboard_historic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkout_component"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bills_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
